# rite

./: .gitignore  LICENSE  README.md  esbuild.config.js  esbuild.watcher.js  package.json  todo.md  tsconfig.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: args.rs  commands.rs  main.rs
static/: colors.css  index.html  preview.css  prompt.css  style.css  upload.css
static/js/: main.js  main.js.map
static/src/: EditorState.ts  RiteEditor.ts  commands.ts  config.ts  keybinds.ts  macrolight.d.ts  main.ts  preview.ts  prompt.ts  utils.ts
