[package]
name = "rite"
version = "0.11.4"
description = "Your new distraction-free writing app."
authors = ["shantaram <me@shantaram.xyz>"]
license = "MIT"
repository = ""
default-run = "rite"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", features = ["cli", "dialog-all", "fs-all", "fs-create-dir", "fs-read-text-file", "fs-write-file", "notification-all", "os-all", "path-all", "shell-open"] }
dirs = "4.0.0"
rand = "0.8"
clap = "2.33"

# Uncomment this to get the WebKit debugger in the release build
[profile.release.package.wry]
debug = true
debug-assertions = true

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
