[package]
name = "rite"
version = "0.15.3"
description = "Your new distraction-free writing app."
authors = ["shantaram <me@shantaram.xyz>"]
license = "MIT"
repository = "https://github.com/xyzshantaram/rite"
default-run = "rite"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["cli", "dialog-all", "fs-all", "global-shortcut-all", "http-all", "notification-all", "os-all", "path-all", "process-all", "shell-open", "window-all"] }
dirs = "4.0.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.0.2", features = ["full"] }
lazy_static = "1.4.0"
path-absolutize = "3.0.14"

# Uncomment this to get the WebKit debugger in the release build
[profile.release.package.wry]
debug = true
debug-assertions = true

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
